--- a/UVcompress.vcxproj
+++ b/UVcompress.vcxproj
@@ -117,7 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>./Include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./Include;./Head</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,12 +142,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="source.cpp" />
+    <ClCompile Include="Source\source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Atlas.h" />
-    <ClInclude Include="ChartConstruction.h" />
-    <ClInclude Include="TexturedMesh.h" />
+    <ClInclude Include="Head\Atlas.h" />
+    <ClInclude Include="Head\ChartConstruction.h" />
+    <ClInclude Include="Head\TexturedMesh.h" />
+    <ClInclude Include="Head\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
