--- a/UVcompress.vcxproj
+++ b/UVcompress.vcxproj
@@ -115,9 +115,10 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NOMINMAX;_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <AdditionalIncludeDirectories>./Include;./Head</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,6 +158,7 @@
     <ClInclude Include="Head\Atlas.h" />
     <ClInclude Include="Head\base.h" />
     <ClInclude Include="Head\Block.h" />
+    <ClInclude Include="Head\CDTtest.h" />
     <ClInclude Include="Head\ChartConstruction.h" />
     <ClInclude Include="Head\CompressUV.h" />
     <ClInclude Include="Head\convolve.h" />
